Self-review fixes on lineage primitives
Six small concerns surfaced during a self-review of PR #6464:

- JpaJobLineageStore.record() is now @Transactional + uses saveAll().
  Without it, a multi-signature record() could leave partial state if a
  save mid-way failed. The @Transactional means callers who don't already
  have an outer transaction still get atomicity.
- DefaultHashLineageDetector now rejects a non-positive workflow window
  at construction time. A negative window silently disables matching
  (since = now + |window|, > comparison never holds) — failing loud at
  startup is much easier to debug than a silent empty-Optional.
- Split constructor validation in DefaultHashLineageDetector — the
  combined requireNonNull + isEmpty expression was mildly clever; one
  statement per check reads cleaner.
- Modernised Collectors.toList() to Stream.toList() in JpaJobLineageStore.
- Dropped misleading `throws IOException` from the private
  DefaultHashLineageDetector.extractAll — all IOExceptions are caught
  inside the loop, so the declaration was dead. RuntimeExceptions still
  propagate by design (we want bugs to surface, not be swallowed).
- Clarified LineageMatch.matchedKind javadoc for the multi-kind-match
  case — when a single job has multiple recorded signatures all matching
  the candidate set, only one matchedKind is returned and the order
  across same-job-different-kind rows is unspecified.

Plus a test for the new workflow-window validation
(constructor_rejectsNonPositiveWorkflowWindow).

Items I considered and rejected:
- Promoting swallowed-extractor-exception log level from DEBUG to WARN:
  would log-flood when a PDF-aware extractor encounters non-PDF inputs.
  Right answer is a metric counter, deferred to shadow-mode wiring.
- @Primary on JpaJobLineageStore: a future Redis bean without @Primary
  would fail loudly at startup with "expected single matching bean" —
  the dev sees the error and decides explicitly. Adding @Primary now
  would presume JP